syntax = "proto3";

package service;
option go_package = "github.com/example/grpc-service/proto;servicepb";

service DataService {
  // Public endpoint
  rpc GetData (DataRequest) returns (DataResponse) {}
  
  // Protected endpoint
  rpc GetProtectedData (DataRequest) returns (DataResponse) {}
  
  // Health check
  rpc HealthCheck (HealthRequest) returns (HealthResponse) {}
}

message DataRequest {
  string request_id = 1;
  int32 delay_ms = 2; // For simulating delays
}

message DataResponse {
  string status = 1;
  string message = 2;
  string request_id = 3;
  repeated Item items = 4;
  string timestamp = 5;
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
  string message = 2;
  string timestamp = 3;
}